test/sema/disallow-use-of-moved-var.delta.output
disallow-use-of-moved-var.delta:10:7: error: use of moved value 't'
    f(t); // CHECK: [[@LINE]]:7: error: use of moved value
      ^
disallow-use-of-moved-var.delta:7:6: warning: unused declaration 'g'
void g() {
     ^
