test/sema/disallow-use-of-moved-var.delta
// RUN: %check_errors %not %delta -typecheck %s

struct T {}

void f(T t) {}

void g() {
    var t = T();
    f(t);
    f(t); // CHECK: [[@LINE]]:7: error: use of moved value
}
